--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="home">
     <div class="wrapper-center">
-      <h1 id="question">Spell "Naiinip"</h1>
+      <h1 id="question">Type mo "Naiinip"</h1>
       <div class="word-container" id="wordDisplay"></div>
       <div class="keyboard" id="keyboard"></div>
     </div>
